@@ -17,6 +17,10 @@ Minor changes:
  * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
    "event" restriction is set or cleared. Suggested by [SW]. [MG]
  * Expanded help on lock types and @powers. [MG]
+ 
+Commands:
+ * Added @mail/review for reading mail you've sent, and @mail/retract for
+   deleting unread mail that you sent. Idea from MUX. Patch by Minion.
 
 Fixes:
  * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
