@@ -134,49 +134,51 @@
 #define SWITCH_RENAME 131
 #define SWITCH_RESTORE 132
 #define SWITCH_RESTRICT 133
-#define SWITCH_RETROACTIVE 134
-#define SWITCH_ROOM 135
-#define SWITCH_ROOMS 136
-#define SWITCH_RSARGS 137
-#define SWITCH_SAVE 138
-#define SWITCH_SEE 139
-#define SWITCH_SEEFLAG 140
-#define SWITCH_SELF 141
-#define SWITCH_SEND 142
-#define SWITCH_SET 143
-#define SWITCH_SETQ 144
-#define SWITCH_SILENT 145
-#define SWITCH_SKIPDEFAULTS 146
-#define SWITCH_SPEAK 147
-#define SWITCH_SPOOF 148
-#define SWITCH_STATS 149
-#define SWITCH_STATUS 150
-#define SWITCH_SUMMARY 151
-#define SWITCH_TABLES 152
-#define SWITCH_TAG 153
-#define SWITCH_TELEPORT 154
-#define SWITCH_TF 155
-#define SWITCH_THINGS 156
-#define SWITCH_TITLE 157
-#define SWITCH_TRACE 158
-#define SWITCH_TYPE 159
-#define SWITCH_UNCLEAR 160
-#define SWITCH_UNCOMBINE 161
-#define SWITCH_UNFOLDER 162
-#define SWITCH_UNGAG 163
-#define SWITCH_UNHIDE 164
-#define SWITCH_UNMUTE 165
-#define SWITCH_UNREAD 166
-#define SWITCH_UNTAG 167
-#define SWITCH_UNTIL 168
-#define SWITCH_URGENT 169
-#define SWITCH_USEFLAG 170
-#define SWITCH_WHAT 171
-#define SWITCH_WHO 172
-#define SWITCH_WILD 173
-#define SWITCH_WIPE 174
-#define SWITCH_WIZ 175
-#define SWITCH_WIZARD 176
-#define SWITCH_YES 177
-#define SWITCH_ZONE 178
+#define SWITCH_RETRACT 134
+#define SWITCH_RETROACTIVE 135
+#define SWITCH_REVIEW 136
+#define SWITCH_ROOM 137
+#define SWITCH_ROOMS 138
+#define SWITCH_RSARGS 139
+#define SWITCH_SAVE 140
+#define SWITCH_SEE 141
+#define SWITCH_SEEFLAG 142
+#define SWITCH_SELF 143
+#define SWITCH_SEND 144
+#define SWITCH_SET 145
+#define SWITCH_SETQ 146
+#define SWITCH_SILENT 147
+#define SWITCH_SKIPDEFAULTS 148
+#define SWITCH_SPEAK 149
+#define SWITCH_SPOOF 150
+#define SWITCH_STATS 151
+#define SWITCH_STATUS 152
+#define SWITCH_SUMMARY 153
+#define SWITCH_TABLES 154
+#define SWITCH_TAG 155
+#define SWITCH_TELEPORT 156
+#define SWITCH_TF 157
+#define SWITCH_THINGS 158
+#define SWITCH_TITLE 159
+#define SWITCH_TRACE 160
+#define SWITCH_TYPE 161
+#define SWITCH_UNCLEAR 162
+#define SWITCH_UNCOMBINE 163
+#define SWITCH_UNFOLDER 164
+#define SWITCH_UNGAG 165
+#define SWITCH_UNHIDE 166
+#define SWITCH_UNMUTE 167
+#define SWITCH_UNREAD 168
+#define SWITCH_UNTAG 169
+#define SWITCH_UNTIL 170
+#define SWITCH_URGENT 171
+#define SWITCH_USEFLAG 172
+#define SWITCH_WHAT 173
+#define SWITCH_WHO 174
+#define SWITCH_WILD 175
+#define SWITCH_WIPE 176
+#define SWITCH_WIZ 177
+#define SWITCH_WIZARD 178
+#define SWITCH_YES 179
+#define SWITCH_ZONE 180
 #endif                          /* SWITCHES_H */
