@@ -131,7 +131,9 @@ REGISTER
 REMIT
 RESTORE
 RESTRICT
+RETRACT
 RETROACTIVE
+REVIEW
 ROOM
 ROOMS
 RSARGS
