@@ -755,6 +755,10 @@ COMMAND(cmd_mail)
     do_mail_read(executor, arg_left);
   else if (SW_ISSET(sw, SWITCH_UNREAD))
     do_mail_unread(executor, arg_left);
+  else if (SW_ISSET(sw, SWITCH_REVIEW))
+    do_mail_review(executor, arg_left, arg_right);
+  else if (SW_ISSET(sw, SWITCH_RETRACT))
+    do_mail_retract(executor, arg_left, arg_right);
   else if (SW_ISSET(sw, SWITCH_STATUS))
     do_mail_status(executor, arg_left, arg_right);
   else if (SW_ISSET(sw, SWITCH_CLEAR))
