@@ -133,7 +133,9 @@ SWITCH_VALUE switch_list[] = {
   {"RENAME", SWITCH_RENAME},
   {"RESTORE", SWITCH_RESTORE},
   {"RESTRICT", SWITCH_RESTRICT},
+  {"RETRACT", SWITCH_RETRACT},
   {"RETROACTIVE", SWITCH_RETROACTIVE},
+  {"REVIEW", SWITCH_REVIEW},
   {"ROOM", SWITCH_ROOM},
   {"ROOMS", SWITCH_ROOMS},
   {"RSARGS", SWITCH_RSARGS},
